--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="grid-icons-xiaomi"><img class="icons-img" src="./img/02/01.png"><p class="icons-text txt-branco">18 lâminas</p></div>
                 <div class="grid-icons-xiaomi"><img class="icons-img" src="./img/02/02.png"><p class="icons-text txt-branco">Até 60 dias de bateria</p></div>
                 <div class="grid-icons-xiaomi"><img class="icons-img" src="./img/02/03.png"><p class="icons-text txt-branco">Totalmente lavável</p></div>
-                <div class="grid-icons-xiaomi"><img class="icons-img" src="./img/02/04.png"><p class="icons-text txt-branco">Velocidade<br>constante para<br>evitar beliscões</p></div>
+                <div class="grid-icons-xiaomi"><img class="icons-img" src="./img/02/04.png"><p class="icons-text txt-branco">Velocidade constante</p></div>
 
            </div>
             
